Changelog for Miosix np embedded OS

- Fixed bug in STM32Serial in IOCTL_SYNC
- Added test to testsuite to explicitly check the tickSkew logic
- Fixed two bugs in kernel.cpp related to the control scheduler. 1. The idle
  thread needs to be set after the main one. 2. The yield on tick skew in
  restartKernel() was not functioning after the code was rewritten using atomic
  operations. The control scheduler heavily relies on this, because if the burst
  of the current thread finishes while the kernel is paused, preemption can only
  occur here, as the control scheduler does not perform periodic preemption.
- Added skyward's anakin board

v2.01
- Renamed board codenamed "polinode" to its final name "wandstem"
- Committed patch from Alain <carpikemail@gmail.com> to make build output more
  readable. Detailed compiler options are still available building with
  "make VERBOSE=1"
- Fixed bug in intrusive.h which caused compiler errors when building with
  exceptions and RTTI disabled
- Added new board: stm32f411re_nucleo
- Added timeconversion.cpp/.h as the first step towards high resolution
  timers
- Added new board: efm32gg332f1024_polinode
- Added new architacture: cortexM3_efm32gg
- Refactored endianness and atomic_ops interfaces from the individual
  architectures to arch/common/core to prevent code duplication.
- Added preliminary C++11 support
v2.0
- Added support for new board, oledboard2
- Added support for new board, tempsensor
- Added support for new board als_mainboard_rev2
- Be less restrictive in pthread_attr_setstacksize(). Accept also stack sizes
  not divisible by 4, as Thread::create() will simply align the stack size.
- Added proper compiler patch versioning through the _MIOSIX_GCC_PATCH_VERSION
  builtin macro.
- Added small fixed to the previous newlib patch. This is the final change for
  termios.h
- Implemented termios support in Miosix, now it is possible to disable echo
  and/or enter raw mode on serial ports using a standard POSIX interface.